# imbora

./: .env.example  .gitignore  CLAUDE.md  HANDOFF_LATEST.md  README.md  docker-compose.yml  pyproject.toml  spec.json
config/: default.yaml  models.yaml  production.yaml
docs/: ADAPTATION_REPORT_2026-02-18.md  BENCHMARKING.md  DS_PIPELINE_BENCHMARK_JOURNAL.md  OPENCLAW_MOLTBOT_SOTA_ALLOW_CODE_CHECKLIST.md  SOTAPPR_INCIDENT_REPORT_2026-02-15.md  SOTAPPR_RUNBOOK.md
src/: cli.py
tests/: conftest.py  test_agents_base.py  test_agents_builder.py  test_agents_council.py  test_agents_librarian.py  test_agents_research_unit.py  test_agents_sentinel.py  test_agents_state_manager.py  test_budget_hints.py  test_cli_helpers.py  test_cli_mission_start.py  test_cli_model_catalog.py  test_complexity_scoring.py  test_core_config.py  test_core_exceptions.py  test_core_factory.py  test_core_models.py  test_datasci_artifacts.py  test_datasci_augmentation.py  test_datasci_base_agent.py  test_datasci_benchmark.py  test_datasci_column_ai_enricher.py  test_datasci_column_profiler.py  test_datasci_column_treatment.py  test_datasci_config.py  test_datasci_data_audit.py  test_datasci_deployment.py  test_datasci_eda.py  test_datasci_ensemble.py  test_datasci_evaluation.py  test_datasci_fe_assessment.py  test_datasci_feature_engineering.py  test_datasci_llm_feature_engineer.py  test_datasci_model_training.py  test_datasci_models.py  test_datasci_pareto.py  test_datasci_pipeline.py  test_datasci_scale_router.py  test_datasci_synth_generator.py  test_datasci_threshold_optimizer.py  (+37 more)
(+105 files in other folders)
